--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <div class="col-lg-6 mb-3 mb-lg-0">
                     <div class="card" style="background-color:#BCE2CB;">
                         <div class="card-body">
-                            <img src="assets/notetaking.png" class="img-fluid rounded-circle mb-3" width="362" height="362" alt="Note Taking Web App">
-                            <h5 class="card-title mb-3">Note Keeping Web Application</h5>
+                            <!-- <img src="assets/notetaking.png" class="img-fluid rounded-circle mb-3" width="362" height="362" alt="Note Taking Web App"> -->
+                            <h5 class="card-title mb-3">Fact Check Application</h5>
                             <button type="button" class="btn btn-earth" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 find out more
                             </button>
@@ -79,7 +79,7 @@
                 <div class="col-lg-6">
                     <div class="card" style="background-color: #ECC1B2;">
                         <div class="card-body">
-                            <img src="assets/simon.png" class="img-fluid rounded-circle mb-3" width="300" height="300" alt="Simon Game">
+                            <!-- <img src="assets/simon.png" class="img-fluid rounded-circle mb-3" width="300" height="300" alt="Simon Game"> -->
                             <h5 class="card-title mb-3">Thrift Thrive</h5>
                             <button type="button" class="btn btn-earth" data-bs-toggle="modal" data-bs-target="#Modal2">
                                 find out more
