--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 <div class="modal-dialog modal-dialog-centered">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h1 class="modal-title fs-5 text-center" id="ModalLabel2">Simon Game</h1>
+                                            <h1 class="modal-title fs-5 text-center" id="ModalLabel2">thrift thrive</h1>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                         </div>
                                         <div class="modal-body">
@@ -97,7 +97,7 @@
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">close</button>
                                             <a href="https://github.com/jordianojr/thrift-thrive" target="_blank" class="btn btn-info">Github Repo</a>
-                                            <a href="https://thriftthrive-a28e7.web.app/login" target="_blank" class="btn btn-primary">Try the Game</a>
+                                            <a href="https://thriftthrive-a28e7.web.app/login" target="_blank" class="btn btn-primary">visit website</a>
                                         </div>
                                     </div>
                                 </div>
